--- a/reset.css
+++ b/reset.css
@@ -41,3 +41,8 @@ hr {
   color: #000000; /* Old Internet Explorer browser. */
   height: 1px;
 }
+
+/* Keep fieldset tag as standard as possible. Some space is necessary. */
+fieldset {
+  padding: 12px;
+}
