--- a/reset.css
+++ b/reset.css
@@ -46,3 +46,10 @@ hr {
 fieldset {
   padding: 12px;
 }
+
+/* Keep textarea tag width without overflowing. */
+textarea {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
