--- a/reset.css
+++ b/reset.css
@@ -27,7 +27,8 @@ ol, ul {
 }
 
 /*
-  Keep the default border for input and others elements while is selected. Default color is different on each browser.
+  Keep the default border for input and others elements while is selected.
+  Default color is different on each browser.
 */
 :focus {
   outline: 0;
