--- a/reset.css
+++ b/reset.css
@@ -1,8 +1,8 @@
-/*******************************************/
-/* RESET.CSS                               */
-/* Keep It Simple Reset CSS                */
-/* https://github.com/rnyit/kis-reset-css  */
-/*******************************************/
+/******************************************/
+/* RESET.CSS                              */
+/* Keep It Simple Reset CSS               */
+/* https://github.com/rnyit/kis-reset-css */
+/******************************************/
 
 /* Keep everything equal */
 * {
