--- a/reset.css
+++ b/reset.css
@@ -1,10 +1,10 @@
 /******************************************/
 /* RESET.CSS                              */
-/* Keep It Simple Reset CSS               */
+/* KEEP IT SIMPLE RESET CSS               */
 /* https://github.com/rnyit/kis-reset-css */
 /******************************************/
 
-/* Keep everything equal */
+/* Keep everything equal. */
 * {
   margin: 0;
   padding: 0;
@@ -21,16 +21,10 @@ ol, ul {
   list-style: none;
 }
 
-/* Keep the default border for input and other elements while are selected. */
-/* Default color is different on each browser. */
+/* Keep the border color for input and other elements while are selected across any browser clients. */
+/* Default border color is different on each browser client. */
 :focus {
   outline: 0;
-}
-
-/* Keep input autofill background color for saved credentials transparent across any browser clients. */
-input:-webkit-autofill {
-  background-color: transparent !important;
-  -webkit-box-shadow: 0 0 0 50px white inset;
 }
 
 /* Keep hr tag in the same color on any browser clients. */
@@ -40,4 +34,10 @@ hr {
   border: none;
   color: #000000; /* Old Internet Explorer browser. */
   height: 1px;
+}
+
+/* Keep input autofill background color for saved credentials transparent across any browser clients. */
+input:-webkit-autofill {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0 50px white inset;
 }
